Prevent burger from overlapping menu contents

--- a/components/layout/Header.module.css
+++ b/components/layout/Header.module.css
@@ -70,6 +70,11 @@
     padding: 0 15px;
   }
 
+  .title {
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
   .nav {
     font-size: var(--font-size-normal);
     flex-wrap: wrap;
